// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchBar component testing handlers work as intended with no ref 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing handlers work as intended with no ref 2`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing matches snapshot - blur 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
    style="transition: box-shadow 0.15s linear;"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing matches snapshot - button blur 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing matches snapshot - button hover 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing matches snapshot - focus 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
    style="transition: box-shadow 0.15s linear; box-shadow: 0px 0px 10px var(--primary);"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;

exports[`SearchBar component testing matches snapshot 1`] = `
<div>
  <div
    class="sc-ggWZvA sc-dTvVRJ jYNhMr iUfGNI"
  >
    <input
      class="sc-kNOymR jMKEsd"
      name="search"
      placeholder="Search"
      spellcheck="true"
      type="search"
    />
    <button
      class="sc-dYwGCk jjuflB"
    >
      <span
        class="sc-fhHczv jxaKYX"
      >
        $
        Search
      </span>
      <i
        class="fa-solid fa-magnifying-glass"
      />
    </button>
  </div>
</div>
`;
